# parprog

./: Readme.md
merge_sort/: main.cpp  makefile  readme  sort.cpp  sort.hpp
openmp/7_sem/1_lab/: 1a_MPI.cpp  1d_openmp.cpp  main.cpp  main_mpi.cpp  readme  test.hpp
openmp/7_sem/2_lab/: Makefile  graph.py  main.cpp  numerov.cpp  numerov.h  output.txt
openmp/7_sem/Matrix/: Makefile  main.cpp  matrix.hpp  readme  speed  (+8 more)
openmp/7_sem/fft/: CMakeLists.txt  fft.cpp  fft.h  graph.py  main.cpp  result1.txt  result2.txt
rt_prikoly/: Readme
rt_prikoly/PRG/: PRG.ise  PRG.restore  counter.bgn  counter.bit  counter.bld  counter.cmd_log  counter.drc  counter.jhd  counter.lfp  counter.ncd  counter.ngc  counter.ngd  counter.ngr  counter.pad  counter.par  counter.pcf  counter.prj  counter.ptwx  counter.sch  counter.syr  counter.twr  counter.twx  counter.ucf  counter.unroutes  counter.vf  counter.xst  counter_map.map  counter_map.mrp  counter_map.ncd  counter_map.ngm  counter_ngdbuild.xrpt  counter_pad.csv  counter_pad.txt  counter_par.xrpt  counter_summary.html  counter_usage.xml  counter_xst.xrpt  gyua.mcs  gyua.prm  gyua.sig  (+4 more)
test/lab/: Readme.md  a.out  count.h  main.c  result.o145382  result.o145383  run.sh
threads/: count.c  count.h  main.c  makefile  readme  unit.cpp
works/exp/: exp  exp.c  long.h  run.sh  sum.o142153  sum.o142243  sum.o142244  sum.o147287  sum.o147288
works/handshakes/: handshakes.c  message  run.sh
works/hello/: a.out  job.sh  my_job.o140048  my_job.o140050  my_job.o140058  my_job.o140248  test.c
works/summa/: .sum.c.swp  sum  sum.c  sum.sh
(+39 files in other folders)
